
PIG-4028: add a flag to control the ivy resolve/retrieve output (gkesavan via daijy)

PIG-4015: Provide a way to disable auto-parallism in tez (daijy)

PIG-3846: Implement automatic reducer parallelism (daijy)

PIG-3939: SPRINTF function to format strings using a printf-style template (mrflip via cheolsoo)

PIG-3970: Merge Tez branch into trunk (daijy)
 
OPTIMIZATIONS
 
BUG FIXES

PIG-4143: Port more mini cluster tests to Tez - part 7 (daijy)

PIG-4149: Rounding issue in FindQuantiles (daijy)

PIG-4145: Port local mode tests to Tez - part1 (daijy)

PIG-4076: Fix pom file (daijy)

PIG-4140: VertexManagerEvent.getUserPayload returns ReadOnlyBuffer after TEZ-1449 (daijy)

PIG-4136: No special handling jythonjar/jrubyjar in e2e tests after PIG-4047 (daijy)

PIG-4137: Fix hadoopversion 23 compilation due to TEZ-1469 (daijy)

PIG-4135: Fetch optimization should be disabled if plan contains no limit (cheolsoo)

PIG-4061: Make Streaming UDF work in Tez (hotfix PIG-4061-3.patch)

PIG-4134: TEZ-1449 broke the build (knoguchi)

PIG-4132: TEZ-1246 and TEZ-1390 broke a build (knoguchi)

PIG-4129: Pig -Dhadoopversion=23 compile fail after TEZ-1426 (daijy)

PIG-4127: Build failure due to TEZ-1132 and TEZ-1416 (lbendig)

PIG-4125: TEZ-1347 broke the build

PIG-4123: Increase memory for TezMiniCluster (daijy)

PIG-4122: Fix hadoopversion 23 compilation due to TEZ-1194 (daijy)

PIG-4061: Make Streaming UDF work in Tez (daijy)

PIG-4118: Fix hadoopversion 23 compilation due to TEZ-1237/TEZ-1407 (daijy)

PIG-4109: register local jar fail on Windows when Pig script is remote (daijy)

PIG-4116: Update Pig doc about Hadoop 2 Streaming Python UDF support (cheolsoo)

PIG-4112: NPE in packager when union + group-by followed by replicated join in Tez (rohini via cheolsoo)

PIG-4113: TEZ-1386 breaks hadoop 2 compilation in trunk (cheolsoo)

PIG-4110: TEZ-1382 breaks Hadoop 2 compilation (cheolsoo)

PIG-4105: Fix TestAvroStorage with ibm jdk (fang fang chen via daijy)
